src/styles/App.css
@font-face { font-family: Companion; src: url('/fonts/Compagnon-Medium.woff'); }

.AppContainer {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    flex: 1 1 auto;
    overflow-y: scroll;
    position: relative;
    color: black;
    font-family: Companion, serif;
}

.AppContainer__footer--login {
    flex: 0 0 15px;
    text-align: left;
    font-size: 0.6em;
}

.AppContainer__body {
    display: flex;
    flex-direction: column;
    flex: 1 0 auto;
    width: 70vw;
    margin-top: -1px;
}

.AppContainer__body--mobile {
    width: 100vw;
}

.AppContainer__body--mobile > * {
    flex: 0 0 auto
}

.AppContainer__sideBar {
    background: white;
    flex: 1 0 auto;
    min-height: 100vh;
    width: 26vw;
    max-width: 320px;
    display: flex;
    flex-direction: column;
    margin: 0 2vw;
}

.AppContainer__sideBar--mobile {
    z-index: 10;
    height: 0px;
    min-height: 0;
    overflow: hidden;
    display: block;
    margin: 0;
    position: absolute;
    top: -8px;
    border-bottom: 8px solid black;
    left: 0;
    max-width: 100vw;
    width: 100vw;
    padding-left: 10vw;
}

.flex {
    display: flex;
}
.hidden {
    display: none;
}
.order0 {order:0}
.order1 {order:1}
.order2 {order:2}
.order3 {order:3}

.input--select {
    height: auto;
}

.button-success,
.button-error,
.button-warning,
.button-secondary {
    color: white;
    border-radius: 4px;
    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
}

.button-success {
    background: rgb(28, 184, 65); /* this is a green */
}

.button-error {
    background: rgb(202, 60, 60); /* this is a maroon */
}

.button-warning {
    background: rgb(223, 117, 20); /* this is an orange */
}

.button-secondary {
    background: rgb(66, 184, 221); /* this is a light blue */
}

.cut-text {
    text-overflow: ellipsis;
    overflow: hidden;
    width: 160px;
    height: 1.2em;
    white-space: nowrap;
}

.CookieWarning {
    position: absolute;
    width: 100%;
    background: white;
    text-align: center;
    bottom: 0;
    left: 0;
    height: 50px;
    padding-top: 5px;
    border-top: 8px solid black;
    font-size: 14px;
    font-weight: bold;
}

.AppContainer--mobile .CookieWarning {
    height: 80px;
    border-bottom: 8px solid black;
}

.CookieWarning--hidden {
    display: none;
}

.CookieWarning a {
    color: black;
    font-style: italic;
}
.CookieWarning button {
    margin-left: 20px;
    background: black;
    color: white;
    text-transform: uppercase;
    border: 0;
    font-weight: bold;
    height: 30px;
    width: 60px;
}

.MobileNavigator {
    position: absolute;
    top: 0;
    right: 0;
    z-index: 11;
}

.MobileNavigator__button {
    color: black;
    background-color: transparent !important;
}
.MobileNavigator__button:hover {
    color: black;
    background-color: transparent;
}

.blink {
    animation: blink-animation 2s steps(5, start) infinite;
    -webkit-animation: blink-animation 2s steps(5, start) infinite;
}
@keyframes blink-animation {
    to {
        visibility: hidden;
    }
}
@-webkit-keyframes blink-animation {
    to {
        visibility: hidden;
    }
}


.marquee {
    height: 25px;
    width: 420px;
    max-width: 100%;

    overflow: hidden;
    position: relative;
}

.marquee div {
    display: block;
    width: 300%;
    height: 30px;

    position: absolute;
    overflow: hidden;

    animation: marquee 8s linear infinite;
}

.marquee span {
    float: left;
    width: 50%;
}

@keyframes marquee {
    0% { left: 0; }
    100% { left: -150%; }
}

